fix problem with info pane visibility

--- a/src/InfoPane.css
+++ b/src/InfoPane.css
@@ -6,7 +6,6 @@
   z-index: 314159;
   pointer-events: initial;
   display: inline-block;
-  opacity: 100%;
 }
 
 .post-image img {
